    conversion to Decimal first.
    
    Unfortunately, some exotic subquery cases 
    can even see different types between 
    individual result rows, so the Numeric 
    handler, when instructed to return Decimal,
    can't take full advantage of "native decimal"
    mode and must run isinstance() on every value
    to check if its Decimal already. Reopen of
    [ticket:1840]
    
0.6.2
=====
- orm
  - Query.join() will check for a call of the
    form query.join(target, clause_expression), 
    i.e. missing the tuple, and raise an informative
    error message that this is the wrong calling form.
    
  - Fixed bug regarding flushes on self-referential 
    bi-directional many-to-many relationships, where
    two objects made to mutually reference each other
    in one flush would fail to insert a row for both
    sides.  Regression from 0.5. [ticket:1824]
  
  - the post_update feature of relationship() has been
    reworked architecturally to integrate more closely
    with the new 0.6 unit of work.  The motivation 
    for the change is so that multiple "post update"
    calls, each affecting different foreign key
    columns of the same row, are executed in a single
    UPDATE statement, rather than one UPDATE 
    statement per column per row.   Multiple row
    updates are also batched into executemany()s as 
    possible, while maintaining consistent row ordering.
    
  - Query.statement, Query.subquery(), etc. now transfer
    the values of bind parameters, i.e. those specified
    by query.params(), into the resulting SQL expression.
    Previously the values would not be transferred
    and bind parameters would come out as None.
    
  - Subquery-eager-loading now works with Query objects
    which include params(), as well as get() Queries.

  - Can now call make_transient() on an instance that
    is referenced by parent objects via many-to-one,
    without the parent's foreign key value getting
    temporarily set to None - this was a function